# lead-generator

./: .env.example  .gitignore  02_BRAND_SYSTEM_PROMPT (1).md  Asterley_Bros_Master_Drinks_Guide_DRAFT.md  CLAUDE.md  CONTRIBUTING.md  README.md  SDR_Follow_Up_Sequence_Design.md  SDR_Lead_Data_Qualification.xlsx  SDR_Venue_Categories.xlsx  Stockist Spreadsheet 1.csv  config.yaml  firebase.json  firestore.indexes.json  main.py  package-lock.json  pyproject.toml  storage.rules
docs/: ARCHITECTURE.md  LINKEDIN_SCRAPER.md  PROJECT.md  backfill-open-tracking.md  email-prompt.md  follow-up-sequence.md  gcp-iam-fix.md  handoff-beta-catchup.md  operator-loop-plan.md  operator-loop-proposals.md  operator-loop-testing-plan.md  prompt-refinement-guide.md  re-enrich-script.md  vps-proposal.md  wine_email_campaigns.md
frontend/: .env.example  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
functions/: .env.example  .gitignore  approved-cap.test.js  backfill-autotags.mjs  backfill-coach-features.mjs  backfill-generation-log.mjs  backfill-thread-tags.mjs  check-ingestion.mjs  check-recent-scrapes.mjs  check-urls-ingested.mjs  clean-email-body.mjs  cleanup-localdirect-tag.mjs  compare-prompt-v17.mjs  create-test-email-vince.mjs  dedup-drafts.mjs  diag-coach-stats.mjs  diag-draft-segment.mjs  diag-mint-token.mjs  diag-read-user.mjs  diag-tag-localdirect.mjs  diag-threads.mjs  feature-extractor.js  followup-integration.test.js  followup-logic.js  followup-logic.test.js  index.js  linkedin-health-check.mjs  package-lock.json  package.json  prompt-rules.test.js  (+4 more)
(+329 files in other folders)
